--- a/charts/openstack-cluster/templates/secret-cloud-config.yaml
+++ b/charts/openstack-cluster/templates/secret-cloud-config.yaml
@@ -1,5 +1,5 @@
-{{- if not .Values.cloudCredentialsSecretName }}
-{{- $cloud := index .Values.clouds .Values.cloudName }}
+{{- if not .Values.global.cloudCredentialsSecretName }}
+{{- $cloud := index .Values.global.clouds .Values.global.cloudName }}
 {{- if not (dig "auth" "project_id" nil $cloud) }}
 {{- fail "clouds.yaml must contain the project ID" }}
 {{- end }}
@@ -20,8 +20,8 @@ stringData:
   clouds.yaml: |
     clouds:
       openstack:
-        {{ index .Values.clouds .Values.cloudName | toYaml | indent 8 | trim }}
-  {{- with .Values.cloudCACert }}
+        {{ index .Values.global.clouds .Values.global.cloudName | toYaml | indent 8 | trim }}
+  {{- with .Values.global.cloudCACert }}
   cacert: |
     {{ . | indent 4 | trim }}
   {{- end }}
