--- a/charts/cluster-addons/templates/openstack/cloud-config.yaml
+++ b/charts/cluster-addons/templates/openstack/cloud-config.yaml
@@ -1,7 +1,7 @@
 {{- if .Values.openstack.enabled }}
 ---
-apiVersion: addons.stackhpc.com/v1alpha1
-kind: Manifests
+apiVersion: addons.cluster.x-k8s.io/v1alpha1
+kind: HelmChartProxy
 metadata:
   name: {{ include "cluster-addons.componentName" (list . "cloud-config") }}
   labels: {{ include "cluster-addons.componentLabels" (list . "cloud-config") | nindent 4 }}
@@ -9,59 +9,65 @@ metadata:
     # Tell Argo to ignore the non-controller owner references for this object
     argocd.argoproj.io/sync-options: "ControllerReferencesOnly=true"
 spec:
-  clusterName: {{ include "cluster-addons.clusterName" . }}
-  bootstrap: true
-  targetNamespace: {{ .Values.openstack.targetNamespace }}
+  repoURL: {{ .Values.openstack.secret.chart.repo }}
+  chartName: {{ .Values.openstack.secret.chart.name }}
+  version: {{ .Values.openstack.secret.chart.version }}
+  namespace: {{ .Values.openstack.targetNamespace }}
   releaseName: cloud-config
-  manifestSources:
-    - template: |
-        apiVersion: v1
-        kind: Secret
-        metadata:
-          name: cloud-config
-        data:
-          {{ "{{" }} cloud_identity.data | toyaml | indent(2) {{ "}}" }}
-        stringData:
-          cloud.conf: |
-            [Global]
-            use-clouds=true
-            clouds-file=/etc/config/clouds.yaml
-            cloud=openstack
-        {%- if "cacert" in cloud_identity.data %}
-            ca-file=/etc/config/cacert
-        {%- else %}
-            tls-insecure=true
-        {%- endif %}
-            [Networking]
-            {{- $networkingItems := default dict .Values.openstack.cloudConfig.Networking }}
-            {{- if hasKey $networkingItems "internal-network-name" }}
-            internal-network-name={{ index $networkingItems "internal-network-name" }}
-            {{- else }}
-            internal-network-name={{ "{{" }} infra_cluster.status.network.name {{ "}}" }}
-            {{- end }}
-            {{- range $netName, $netValue := omit $networkingItems "internal-network-name" }}
-            {{ $netName }}={{ $netValue }}
-            {{- end }}
-            [LoadBalancer]
-            {{- $lbItems := default dict .Values.openstack.cloudConfig.LoadBalancer }}
-            {{- if hasKey $lbItems "floating-network-id" }}
-            floating-network-id={{ index $lbItems "floating-network-id" }}
-            {{- else }}
-            floating-network-id={{ "{{" }} infra_cluster.status.externalNetwork.id {{ "}}" }}
-            {{- end }}
-            {{- range $lbName, $lbValue := omit $lbItems "floating-network-id" }}
-            {{ $lbName }}={{ $lbValue }}
-            {{- end }}
-            {{-
-              range $section, $items := omit
-                .Values.openstack.cloudConfig
-                "Global"
-                "LoadBalancer"
-                "Networking"
-            }}
-            [{{ $section }}]
-            {{- range $name, $value := $items }}
-            {{ $name }}={{ $value }}
-            {{- end }}
-            {{ end }}
+  clusterSelector:
+    matchLabels:
+      capi.stackhpc.com/cluster: {{ include "cluster-addons.clusterName" . }}
+  valuesTemplate: |
+    secretData:
+    {{- with .Values.global.clouds }}
+      clouds.yaml: |
+        clouds:
+          openstack:
+            {{ index . $.Values.global.cloudName | toYaml | indent 12 | trim }}
+    {{- end }}
+    {{- with .Values.global.cloudCACert  }}
+      cacert: {{ . | toYaml | indent 6 | trim }}
+    {{- end }}
+      cloud.conf: |
+        [Global]
+        use-clouds=true
+        clouds-file=/etc/config/clouds.yaml
+        cloud=openstack
+    {{- if .Values.global.cloudCACert }}
+        ca-file=/etc/config/cacert
+    {{- else }}
+        tls-insecure=true
+    {{- end }}
+        [Networking]
+        {{- $networkingItems := default dict .Values.openstack.cloudConfig.Networking }}
+        {{- if hasKey $networkingItems "internal-network-name" }}
+        internal-network-name={{ index $networkingItems "internal-network-name" }}
+        {{- else }}
+        internal-network-name={{ "{{" }} .InfraCluster.status.network.name {{ "}}" }}
+        {{- end }}
+        {{- range $netName, $netValue := omit $networkingItems "internal-network-name" }}
+        {{ $netName }}={{ $netValue }}
+        {{- end }}
+        [LoadBalancer]
+        {{- $lbItems := default dict .Values.openstack.cloudConfig.LoadBalancer }}
+        {{- if hasKey $lbItems "floating-network-id" }}
+        floating-network-id={{ index $lbItems "floating-network-id" }}
+        {{- else }}
+        floating-network-id={{ "{{" }} .InfraCluster.status.externalNetwork.id {{ "}}" }}
+        {{- end }}
+        {{- range $lbName, $lbValue := omit $lbItems "floating-network-id" }}
+        {{ $lbName }}={{ $lbValue }}
+        {{- end }}
+        {{-
+          range $section, $items := omit
+            .Values.openstack.cloudConfig
+            "Global"
+            "LoadBalancer"
+            "Networking"
+        }}
+        [{{ $section }}]
+        {{- range $name, $value := $items }}
+        {{ $name }}={{ $value }}
+        {{- end }}
+        {{ end }}
 {{- end }}
