--- a/charts/cluster-addons/templates/cni/calico.yaml
+++ b/charts/cluster-addons/templates/cni/calico.yaml
@@ -1,14 +1,22 @@
 {{- if and .Values.cni.enabled (eq .Values.cni.type "calico") }}
----
-apiVersion: v1
-kind: Secret
+apiVersion: addons.cluster.x-k8s.io/v1alpha1
+kind: HelmChartProxy
 metadata:
-  name: {{ include "cluster-addons.componentName" (list . "cni-calico") }}-config
-  labels:
-    {{- include "cluster-addons.componentLabels" (list . "cni-calico") | nindent 4 }}
-    addons.stackhpc.com/watch: ""
-stringData:
-  defaults: |
+  name: {{ include "cluster-addons.componentName" (list . "cni-calico") }}
+  labels: {{ include "cluster-addons.componentLabels" (list . "cni-calico") | nindent 4 }}
+  annotations:
+    # Tell Argo to ignore the non-controller owner references for this object
+    argocd.argoproj.io/sync-options: "ControllerReferencesOnly=true"
+spec:
+  repoURL: {{ .Values.cni.calico.chart.repo }}
+  chartName: {{ .Values.cni.calico.chart.name }}
+  version: {{ .Values.cni.calico.chart.version }}
+  namespace: {{ .Values.cni.calico.release.namespace }}
+  releaseName: cni-calico
+  clusterSelector:
+    matchLabels:
+      capi.stackhpc.com/cluster: {{ include "cluster-addons.clusterName" . }}
+  valuesTemplate: |
     tigeraOperator:
       registry: {{ include "cluster-addons.imagePrefix" . }}quay.io
     installation:
@@ -19,143 +27,11 @@ stringData:
         bgp: Disabled
         nodeAddressAutodetectionV4:
           kubernetes: NodeInternalIP
-        ipPools:
-    {% for cidr in cluster.spec.clusterNetwork.pods.cidrBlocks %}
+        ipPools:{{`{{range $i, $cidr := .Cluster.spec.clusterNetwork.pods.cidrBlocks }}`}}
           - blockSize: 26
-            cidr: {{ "{{" }} cidr {{ "}}" }}
+            cidr: {{`{{ $cidr }}`}}
             disableBGPExport: false
             encapsulation: VXLAN
             natOutgoing: Enabled
-            nodeSelector: all()
-    {% endfor %}
-  overrides: |
-    {{- toYaml .Values.cni.calico.release.values | nindent 4 }}
----
-apiVersion: addons.stackhpc.com/v1alpha1
-kind: HelmRelease
-metadata:
-  name: {{ include "cluster-addons.componentName" (list . "cni-calico") }}
-  labels: {{ include "cluster-addons.componentLabels" (list . "cni-calico") | nindent 4 }}
-  annotations:
-    # Tell Argo to ignore the non-controller owner references for this object
-    argocd.argoproj.io/sync-options: "ControllerReferencesOnly=true"
-spec:
-  clusterName: {{ include "cluster-addons.clusterName" . }}
-  bootstrap: true
-  chart: {{ toYaml .Values.cni.calico.chart | nindent 4 }}
-  targetNamespace: {{ .Values.cni.calico.release.namespace }}
-  releaseName: cni-calico
-  valuesSources:
-    - secret:
-        name: {{ include "cluster-addons.componentName" (list . "cni-calico") }}-config
-        key: defaults
-    - secret:
-        name: {{ include "cluster-addons.componentName" (list . "cni-calico") }}-config
-        key: overrides
-{{- if .Values.monitoring.enabled }}
----
-apiVersion: addons.stackhpc.com/v1alpha1
-kind: Manifests
-metadata:
-  name: {{ include "cluster-addons.componentName" (list . "cni-calico-monitoring") }}
-  labels: {{ include "cluster-addons.componentLabels" (list . "cni-calico-monitoring") | nindent 4 }}
-  annotations:
-    # Tell Argo to ignore the non-controller owner references for this object
-    argocd.argoproj.io/sync-options: "ControllerReferencesOnly=true"
-spec:
-  clusterName: {{ include "cluster-addons.clusterName" . }}
-  bootstrap: true
-  targetNamespace: {{ .Values.cni.calico.release.namespace }}
-  releaseName: cni-calico-monitoring
-  manifestSources:
-    # calico-kube-controllers
-    - template: |
-        apiVersion: monitoring.coreos.com/v1
-        kind: ServiceMonitor
-        metadata:
-          name: calico-kube-controllers-metrics
-          namespace: calico-system
-        spec:
-          endpoints:
-            - port: metrics-port
-          namespaceSelector:
-            matchNames:
-              - calico-system
-          selector:
-            matchLabels:
-              k8s-app: calico-kube-controllers
-    # calico-node
-    - template: |
-        apiVersion: v1
-        kind: Service
-        metadata:
-          name: calico-node-metrics
-          namespace: calico-system
-          labels:
-            k8s-app: calico-node
-        spec:
-          clusterIP: None
-          ports:
-            - name: metrics-port
-              port: 9091
-          selector:
-            k8s-app: calico-node
-        ---
-        apiVersion: monitoring.coreos.com/v1
-        kind: ServiceMonitor
-        metadata:
-          name: calico-node-metrics
-          namespace: calico-system
-        spec:
-          endpoints:
-            - port: metrics-port
-          namespaceSelector:
-            matchNames:
-              - calico-system
-          selector:
-            matchLabels:
-              k8s-app: calico-node
-    # calico-typha
-    - template: |
-        apiVersion: v1
-        kind: Service
-        metadata:
-          name: calico-typha-metrics
-          namespace: calico-system
-          labels:
-            k8s-app: calico-typha
-        spec:
-          clusterIP: None
-          ports:
-            - name: metrics-port
-              port: 9093
-          selector:
-            k8s-app: calico-typha
-        ---
-        apiVersion: monitoring.coreos.com/v1
-        kind: ServiceMonitor
-        metadata:
-          name: calico-typha-metrics
-          namespace: calico-system
-        spec:
-          endpoints:
-            - port: metrics-port
-          namespaceSelector:
-            matchNames:
-              - calico-system
-          selector:
-            matchLabels:
-              k8s-app: calico-typha
-    # dashboard
-    - template: |
-        apiVersion: v1
-        kind: ConfigMap
-        metadata:
-          name: cni-calico-dashboard
-          labels:
-            grafana_dashboard: "1"
-        data:
-          cni-calico-dashboard.json: |
-            {{- .Files.Get "grafana-dashboards/cni-calico-dashboard.json" | nindent 12 }}
-{{- end }}
+            nodeSelector: all(){{`{{end}}`}}
 {{- end }}
