--- a/charts/cluster-addons/templates/openstack/ccm.yaml
+++ b/charts/cluster-addons/templates/openstack/ccm.yaml
@@ -1,14 +1,23 @@
 {{- if and .Values.openstack.enabled .Values.openstack.ccm.enabled }}
 ---
-apiVersion: v1
-kind: Secret
+apiVersion: addons.cluster.x-k8s.io/v1alpha1
+kind: HelmChartProxy
 metadata:
-  name: {{ include "cluster-addons.componentName" (list . "ccm-openstack") }}-config
-  labels:
-    {{- include "cluster-addons.componentLabels" (list . "ccm-openstack") | nindent 4 }}
-    addons.stackhpc.com/watch: ""
-stringData:
-  defaults: |
+  name: {{ include "cluster-addons.componentName" (list . "ccm-openstack") }}
+  labels: {{ include "cluster-addons.componentLabels" (list . "ccm-openstack") | nindent 4 }}
+  annotations:
+    # Tell Argo to ignore the non-controller owner references for this object
+    argocd.argoproj.io/sync-options: "ControllerReferencesOnly=true"
+spec:
+  repoURL: {{ .Values.openstack.ccm.chart.repo }}
+  chartName: {{ .Values.openstack.ccm.chart.name }}
+  version: {{ .Values.openstack.ccm.chart.version }}
+  namespace: {{ .Values.openstack.targetNamespace }}
+  releaseName: ccm-openstack
+  clusterSelector:
+    matchLabels:
+      capi.stackhpc.com/cluster: {{ include "cluster-addons.clusterName" . }}
+  valuesTemplate: |
     secret:
       create: false
     cluster:
@@ -25,28 +34,4 @@ stringData:
         effect: NoSchedule
       - key: node-role.kubernetes.io/control-plane
         effect: NoSchedule
-  overrides: |
-    {{- toYaml .Values.openstack.ccm.values | nindent 4 }}
----
-apiVersion: addons.stackhpc.com/v1alpha1
-kind: HelmRelease
-metadata:
-  name: {{ include "cluster-addons.componentName" (list . "ccm-openstack") }}
-  labels: {{ include "cluster-addons.componentLabels" (list . "ccm-openstack") | nindent 4 }}
-  annotations:
-    # Tell Argo to ignore the non-controller owner references for this object
-    argocd.argoproj.io/sync-options: "ControllerReferencesOnly=true"
-spec:
-  clusterName: {{ include "cluster-addons.clusterName" . }}
-  bootstrap: true
-  chart: {{ toYaml .Values.openstack.ccm.chart | nindent 4 }}
-  targetNamespace: {{ .Values.openstack.targetNamespace }}
-  releaseName: ccm-openstack
-  valuesSources:
-    - secret:
-        name: {{ include "cluster-addons.componentName" (list . "ccm-openstack") }}-config
-        key: defaults
-    - secret:
-        name: {{ include "cluster-addons.componentName" (list . "ccm-openstack") }}-config
-        key: overrides
 {{- end }}
