--- a/charts/cluster-addons/templates/openstack/csi-cinder.yaml
+++ b/charts/cluster-addons/templates/openstack/csi-cinder.yaml
@@ -1,16 +1,24 @@
 {{- if and .Values.openstack.enabled .Values.openstack.csiCinder.enabled }}
 ---
-apiVersion: v1
-kind: Secret
+apiVersion: addons.cluster.x-k8s.io/v1alpha1
+kind: HelmChartProxy
 metadata:
   name: {{ include "cluster-addons.componentName" (list . "csi-cinder") }}-config
   labels:
     {{- include "cluster-addons.componentLabels" (list . "csi-cinder") | nindent 4 }}
-    addons.stackhpc.com/watch: ""
-stringData:
-  # By default, we disable the storage class deployed by the cinder-csi chart
-  # We deploy our own instead as it gives us more control over the parameters
-  defaults: |
+  annotations:
+    # Tell Argo to ignore the non-controller owner references for this object
+    argocd.argoproj.io/sync-options: "ControllerReferencesOnly=true"
+spec:
+  repoURL: {{ .Values.openstack.csiCinder.chart.repo }}
+  chartName: {{ .Values.openstack.csiCinder.chart.name }}
+  version: {{ .Values.openstack.csiCinder.chart.version }}
+  namespace: {{ .Values.openstack.targetNamespace }}
+  releaseName: csi-cinder
+  clusterSelector:
+    matchLabels:
+      capi.stackhpc.com/cluster: {{ include "cluster-addons.clusterName" . }}
+  valuesTemplate: |
     csi:
       plugin:
         # This has to be non-empty or the chart fails to render
@@ -28,51 +36,13 @@ stringData:
       enabled: true
       create: false
       name: cloud-config
+    clusterID: {{ include "cluster-addons.clusterName" . }}
     storageClass:
       enabled: false
-    clusterID: {{ include "cluster-addons.clusterName" . }}
-  overrides: |
-    {{- toYaml .Values.openstack.csiCinder.values | nindent 4 }}
----
-apiVersion: addons.stackhpc.com/v1alpha1
-kind: HelmRelease
-metadata:
-  name: {{ include "cluster-addons.componentName" (list . "csi-cinder") }}
-  labels: {{ include "cluster-addons.componentLabels" (list . "csi-cinder") | nindent 4 }}
-  annotations:
-    # Tell Argo to ignore the non-controller owner references for this object
-    argocd.argoproj.io/sync-options: "ControllerReferencesOnly=true"
-spec:
-  clusterName: {{ include "cluster-addons.clusterName" . }}
-  bootstrap: true
-  chart: {{ toYaml .Values.openstack.csiCinder.chart | nindent 4 }}
-  targetNamespace: {{ .Values.openstack.targetNamespace }}
-  releaseName: csi-cinder
-  valuesSources:
-    - secret:
-        name: {{ include "cluster-addons.componentName" (list . "csi-cinder") }}-config
-        key: defaults
-    - secret:
-        name: {{ include "cluster-addons.componentName" (list . "csi-cinder") }}-config
-        key: overrides
-{{- if .Values.openstack.csiCinder.defaultStorageClass.enabled }}
----
-apiVersion: addons.stackhpc.com/v1alpha1
-kind: Manifests
-metadata:
-  name: {{ include "cluster-addons.componentName" (list . "csi-cinder-storageclass") }}
-  labels: {{ include "cluster-addons.componentLabels" (list . "csi-cinder-storageclass") | nindent 4 }}
-  annotations:
-    # Tell Argo to ignore the non-controller owner references for this object
-    argocd.argoproj.io/sync-options: "ControllerReferencesOnly=true"
-spec:
-  clusterName: {{ include "cluster-addons.clusterName" . }}
-  bootstrap: true
-  targetNamespace: {{ .Values.openstack.targetNamespace }}
-  releaseName: csi-cinder-storageclass
-  manifestSources:
-    - template: |
-        {{- with .Values.openstack.csiCinder.defaultStorageClass }}
+    {{- if or .Values.openstack.csiCinder.defaultStorageClass.enabled .Values.openstack.csiCinder.additionalStorageClasses }}
+      custom: |-
+      {{- with .Values.openstack.csiCinder.defaultStorageClass }}
+        ---
         apiVersion: storage.k8s.io/v1
         kind: StorageClass
         metadata:
@@ -94,9 +64,9 @@ spec:
         {{- with .allowedTopologies }}
         allowedTopologies: {{ toYaml . | nindent 6 }}
         {{- end }}
-        {{- end }}
-{{- range $rangeItem := .Values.openstack.csiCinder.additionalStorageClasses }}
-    - template: |
+      {{- end }}
+      {{- range $rangeItem := .Values.openstack.csiCinder.additionalStorageClasses }}
+        ---
         apiVersion: storage.k8s.io/v1
         kind: StorageClass
         metadata:
@@ -116,6 +86,6 @@ spec:
         {{- with $rangeItem.allowedTopologies }}
         allowedTopologies: {{ toYaml . | nindent 6 }}
         {{- end }}
-{{- end }}
-{{- end }}
+      {{- end }}
+    {{- end }}
 {{- end }}
