add ServerSideApply=true argocd flag to cloud credentals secret

--- a/charts/openstack-cluster/templates/secret-cloud-config.yaml
+++ b/charts/openstack-cluster/templates/secret-cloud-config.yaml
@@ -14,7 +14,8 @@ metadata:
     # deletion cannot proceed any further. So prevent Helm from deleting it.
     helm.sh/resource-policy: keep
     # For Argo, this resource should be pruned last out of everything
-    argocd.argoproj.io/sync-options: PruneLast=true
+    # Avoid 262144 bytes limit on annotations when embeding a long cacert chain
+    argocd.argoproj.io/sync-options: PruneLast=truemetadata,ServerSideApply=true
 stringData:
   # Just include the data for the cloud we will be using
   clouds.yaml: |
